src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@out2-wfsAU-spA2.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nset parent: A2\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-output \"headless-2\"\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-2\"\n}"
expression: outcome.snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 928 × 1044, bounds: 800 × 600, states: []

post-map configures:
size: 0 × 0, bounds: 1900 × 1060, states: []
size: 1 × 1, bounds: 1900 × 1060, states: []
